Bug 1317131 - Fix the incorrect AutoTextureLock lifecycle. r=dvander